# personal-rag-assistant

./: .dockerignore  .gitignore  Dockerfile  README.md  agent_functions.py  chat_interface.html  config.json  config_obsidian.json  docker-compose.yml  main.py  pyproject.toml  retriever_manager.py  workplan.md
src/: agents.py  app_api_handler.py  main.py  retriever_manager.py
src/rag_app/: agents.py  retriever_manager.py
