[project]
name = "personal-rag-assistant"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "chromadb>=1.0.20",
    "langchain>=0.3.27",
    "langchain-chroma>=0.2.5",
    "langchain-community>=0.3.29",
    "langchain-google-genai>=2.1.10",
    "langgraph>=0.6.6",
    "pycryptodome>=3.23.0",
    "pypdf>=6.0.0",
    "typing>=3.10.0.0",
    "fastapi>=0.104.1",
    "uvicorn[standard]>=0.24.0",
    "mangum>=0.17.0",
    "pydantic>=2.5.0",
    "python-multipart>=0.0.6",
    "requests>=2.31.0",
    "python-dotenv>=1.0.0",
]